; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_oss.c_oss_set_nonblock_state.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_oss.c_oss_set_nonblock_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_SETFL = common dso_local global i32 0, align 4
@F_GETFL = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [85 x i8] c"Could not set nonblocking on OSS file descriptor. Will not be able to fast-forward.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @oss_set_nonblock_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oss_set_nonblock_state(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to i32*
  store i32* %8, i32** %6, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @F_SETFL, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @F_GETFL, align 4
  %18 = call i32 (i32, i32, ...) @fcntl(i32 %16, i32 %17)
  %19 = load i32, i32* @O_NONBLOCK, align 4
  %20 = or i32 %18, %19
  %21 = call i32 (i32, i32, ...) @fcntl(i32 %13, i32 %14, i32 %20)
  store i32 %21, i32* %5, align 4
  br label %34

22:                                               ; preds = %2
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @F_SETFL, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @F_GETFL, align 4
  %29 = call i32 (i32, i32, ...) @fcntl(i32 %27, i32 %28)
  %30 = load i32, i32* @O_NONBLOCK, align 4
  %31 = xor i32 %30, -1
  %32 = and i32 %29, %31
  %33 = call i32 (i32, i32, ...) @fcntl(i32 %24, i32 %25, i32 %32)
  store i32 %33, i32* %5, align 4
  br label %34

34:                                               ; preds = %22, %11
  %35 = load i32, i32* %5, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %34
  %38 = call i32 @RARCH_WARN(i8* getelementptr inbounds ([85 x i8], [85 x i8]* @.str, i64 0, i64 0))
  br label %39

39:                                               ; preds = %37, %34
  ret void
}

declare dso_local i32 @fcntl(i32, i32, ...) #1

declare dso_local i32 @RARCH_WARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
